--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang=”en”>
 <head>
     <meta charset="utf-8">
@@ -18,10 +17,10 @@
         <video id="camera--view" autoplay playsinline></video>
         <!-- Camera output -->
         <img src="//:0" alt="" id="camera--output">
+        <!-- Camera trigger -->
+        <button id="camera--trigger">Take a picture</button>
     </main>
     <!-- Reference to your JavaScript file -->
     <script src="app.js"></script>
 </body>
-</html>
-  </body>
 </html>
