--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <iframe src="https://lucia-co.github.io/webcamm/" allow="geolocation; microphone; camera"
+    width="300"
+    height="300">
     <!-- Camera -->
     <main id="camera">
         <!-- Camera sensor -->
@@ -22,5 +25,6 @@
     </main>
     <!-- Reference to your JavaScript file -->
     <script src="app.js"></script>
+    </iframe>
 </body>
 </html>
