--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
         <button id="camera--trigger">Take a picture</button>
     </main>
     <!-- Reference to your JavaScript file -->
-    <script src="app.js"></script>
+    <script src="https://github.com/lucia-co/webcamm/blob/master/app.js"></script>
 </body>
 </html>
