--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Name of your awesome camera app -->
     <title>Camera App</title>
     <!-- Link to your main style sheet-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://github.com/lucia-co/webcamm/blob/master/style.css">
 </head>
 <body>
     <!-- Camera -->
