--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Name of your awesome camera app -->
     <title>Camera App</title>
     <!-- Link to your main style sheet-->
-    <link rel="stylesheet" href="https://github.com/lucia-co/webcamm/blob/master/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Camera -->
@@ -21,6 +21,6 @@
         <button id="camera--trigger">Take a picture</button>
     </main>
     <!-- Reference to your JavaScript file -->
-    <script src="https://github.com/lucia-co/webcamm/blob/master/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
